Closed
Bug 697061
Opened 14 years ago
Closed 14 years ago
[followup on bug 296795] better string handling in nsJAR.cpp
Categories
(Core Graveyard :: File Handling, defect)
Core Graveyard
File Handling
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla10
People
(Reporter: wolfgang, Assigned: wolfgang)
References
Details
Attachments
(1 file, 1 obsolete file)
|
3.78 KB,
patch
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Linux i686; rv:8.0) Gecko/20111012 Firefox/8.0 SeaMonkey/2.5
Build ID: 20111012194554
Actual results:
The function nsJAR::GetCertificatePrincipal() uses a string transformation, which is not necessary.
see comment https://bugzilla.mozilla.org/show_bug.cgi?id=296795#c39
| Assignee | ||
Updated•14 years ago
|
| Assignee | ||
Comment 1•14 years ago
|
||
Work without local copy of aFilename.
Comment 2•14 years ago
|
||
Try run for b8ca354cf381 is complete.
Detailed breakdown of the results available here:
https://tbpl.mozilla.org/?tree=Try&rev=b8ca354cf381
Results (out of 190 total builds):
success: 184
warnings: 6
Builds available at http://ftp.mozilla.org/pub/mozilla.org/firefox/try-builds/wolfgang@germund.name-b8ca354cf381
Comment 3•14 years ago
|
||
Did you mean to request review on this? tglek is probably the best choice.
| Assignee | ||
Comment 4•14 years ago
|
||
Comment on attachment 569337 [details] [diff] [review]
optimized string handling
Hallo
I have created a followup and tested my new try server account.
The result summary https://tbpl.mozilla.org/?tree=Try&rev=b8ca354cf381 is empty!?
But the comment 2 and the log files on the ftp server looks good.
The firefox build runs fine on Linux.
Attachment #569337 -
Flags: review?(tglek)
Comment 5•14 years ago
|
||
Comment on attachment 569337 [details] [diff] [review]
optimized string handling
thank you
Attachment #569337 -
Flags: review?(tglek) → review+
| Assignee | ||
Updated•14 years ago
|
Keywords: checkin-needed
Updated•14 years ago
|
Assignee: nobody → wolfgang
Comment 6•14 years ago
|
||
Please could you add commit message + author info, along the lines of http://blog.bonardo.net/2010/06/22/so-youre-about-to-use-checkin-needed
Thanks :-)
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
| Assignee | ||
Comment 7•14 years ago
|
||
Same patch as attachment 569337 [details] [diff] [review] with commit headers inside.
# HG changeset patch
# User Wolfgang Germund <wolfgang@germund.name>
# Date 1319809381 -7200
# Node ID bc922174efa4cc6b29693d0fbba3aa652a832980
# Parent 6ec5b28142d10d83046bdce764fbc1fe3598d4be
Bug 697061: better string handling in nsJAR.cpp
Updated•14 years ago
|
Attachment #569337 -
Attachment is obsolete: true
Comment 8•14 years ago
|
||
Keywords: checkin-needed
Target Milestone: --- → mozilla10
Comment 9•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Updated•10 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•