Bug 697061: better string handling in nsJAR.cpp.  r=tglek